# H8PracticeKitSimulatorRust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: emulator.rs  main.rs  simulator.rs  update.rs  utils.rs
src/simulator/: ioport.rs  message_window.rs  parse_messages.rs  registers.rs  terminal.rs  views.rs
