[package]
name = "h8pks"
version = "0.4.1"
edition = "2021"
license = "MIT"

[dependencies]
eframe = { version = "0.31.0", features = ["default"] }
egui_extras = { version = "0.31.0" }
log = { version = "0.4.25" }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-stream = { version = "0.1.17" }
rfd = { version = "0.15" }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1"
zip = "2.2.2"
